2006-09-10  Daniel Jacobowitz  <dan@codesourcery.com>

	* infcall.c (call_function_by_hand): Check for function pointer
	types.

2006-09-10  Andreas Schwab  <schwab@suse.de>

	* m68k-tdep.c (m68k_analyze_register_saves): Fix decoding of
	`move.l %R,-(%sp)'.

2006-09-07  Vladimir Prus  <vladimir@codesourcery.com>

        * mi/mi-cmd-stack.c (mi_cmd_stack_list_frames): Don't emit 
	error if high requested frame number is larger then number 
	of available frames.
	
2006-09-07  Joel Brobecker  <brobecker@adacore.com>

	From Stephan Springl  <springl-gdb@bfw-online.de>
	* fork-child.c (fork_inferior): Fix typo.

2006-08-28  DJ Delorie  <dj@redhat.com>

	* m32c-tdep.c (m32c_decode_srcdest4): Initialize fields in sd
	that may not be initialized elsewhere.
	(m32c_decode_sd23): Likewise.

2006-08-25  Daniel Jacobowitz  <dan@codesourcery.com>

	* buildsym.c (finish_block): Don't adjust the boundaries of
	nested functions.

2006-08-24  Andreas Schwab  <schwab@suse.de>

	* symfile.c (add_symbol_file_command): Fix off-by-one when
	extending sect_opts.

2006-08-24  Nick Roberts  <nickrob@snap.net.nz>

	* mi/gdb-mi.el: Refer to next release of Emacs as 22.1.

2006-08-23  Nick Roberts  <nickrob@snap.net.nz>

	* mi/gdb-mi.el (gdbmi): Remove gdb-force-update, initialize
	other variables.
	(gdbmi-send): Ensure any text properties can be removed.
	(gdbmi-prompt1): Update to gdb-ui.el
	(gud-gdbmi-marker-filter): Defer setting of gud-running.
	Keep gdb-done-regexp for partial-output-buffer.
	(gdb-stack-list-frames-handler): Add face to function names.

2006-08-22  Mark Kettenis  <kettenis@gnu.org>

	* valprint.c (val_print_type_code_flags): Fix GNU coding standards
	violation.

	* alpha-tdep.c (alpha_register_to_value, alpha_value_to_register)
	(alpha_push_dummy_call, alpha_extract_return_value)
	(alpha_breakpoint_from_pc, alpha_read_insn)
	(alpha_get_longjmp_target, alpha_supply_int_regs)
	(alpha_fill_int_regs, alpha_supply_fp_regs, alpha_fill_fp_regs)